fix: guides are now complete

--- a/notebooks/train_t5_base.ipynb
+++ b/notebooks/train_t5_base.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Training ALF on T5-Base"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Installation\n",
     "\n",
     "Install the main dependencies."
@@ -24,7 +31,7 @@
    "source": [
     "## Prepare for training\n",
     "\n",
-    "Import **CoALT5Translator** neural network architecture, load the dataset & check it out and start the DNN instance."
+    "Import **ALFT5Translator**, load the dataset & check it out. Finally, load **T5** on **ALF** translator instance."
    ]
   },
   {
@@ -33,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from coal_t5 import CoALT5Translator"
+    "from alf_t5 import ALFT5Translator"
    ]
   },
   {
@@ -52,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "translator = CoALT5Translator(\n",
+    "translator = ALFT5Translator(\n",
     "    model_name=\"t5-base\", # T5-Base can do the job, but if you have the resources, go for bigger versions (large, 3b).\n",
     "    use_peft=True,\n",
     "    batch_size=4,\n",
@@ -65,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train CoAL-1"
+    "## Train ALF-T5"
    ]
   },
   {
