--- a/notebooks/train_t5_large.ipynb
+++ b/notebooks/train_t5_large.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Training CoAL on T5-Base"
+    "# Training ALF on T5-Large"
    ]
   },
   {
@@ -31,7 +31,7 @@
    "source": [
     "## Prepare for training\n",
     "\n",
-    "Import **CoALT5Translator** neural network architecture, load the dataset & check it out and start the DNN instance."
+    "Import **ALFT5Translator**, load the dataset & check it out. Finally, load **T5** on **ALF** translator instance."
    ]
   },
   {
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from coal_t5 import CoALT5Translator"
+    "from alf_t5 import ALFT5Translator"
    ]
   },
   {
@@ -59,13 +59,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "translator = CoALT5Translator(\n",
-    "    model_name=\"t5-large\", # T5-Base can do the job, but if you have the resources, go for bigger versions (large, 3b).\n",
+    "translator = ALFT5Translator(\n",
+    "    model_name=\"t5-large\",\n",
     "    use_peft=True,\n",
     "    use_fp16=False, # Needs to be set to False, see the README for more information.\n",
     "    batch_size=4,\n",
     "    num_epochs=20, # It's recommended to set the number of epochs to this number, but you can change if you want.\n",
-    "    output_dir=\"coal_t5_translator\" # You can change the output folder if you want.\n",
+    "    output_dir=\"alf_t5_translator\" # You can change the output folder if you want.\n",
     ")"
    ]
   },
