fix: installing dependencies

--- a/notebooks/train_t5_large.ipynb
+++ b/notebooks/train_t5_large.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install torch transformers peft tqdm matplotlib sentencepiece"
+    "!pip install torch transformers peft tqdm matplotlib sentencepiece nltk"
    ]
   },
   {
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train CoAL-1"
+    "## Train ALF-T5"
    ]
   },
   {
